dev: ClientStatus - to enum Office api - ok. no test yet